export const snapshot = {};

snapshot[`Document Update Command - Help Text 1`] = `
stdout:
"
Usage: update <documentId>

Description:

  Update an existing document                                                     
                                                                                  
  Linear Markdown: a plain Linear URL creates a mention; \`@name\`, \`@[Name](id)\`,  
  and \`[Name](url)\` do not. Get a person's URL from the \`url\` field of            
  \`linear team members <TEAM> --json\`, or an issue's from \`linear issue url <ID>\`.
  Run \`linear markdown\` for collapsible sections and the full reference.          

Options:

  -h, --help                        - Show this help.                                                                   
  -t, --title         <title>       - New title for the document                                                        
  -c, --content       <content>     - New markdown content (inline)                                                     
  -f, --content-file  <path>        - Read new content from file                                                        
  --icon              <icon>        - New icon (emoji)                                                                  
  --project           <project>     - Re-point to project (UUID, slug ID, or name); replaces the current attachment     
  --issue             <issue>       - Re-point to issue (identifier like TC-123); replaces the current attachment       
  --initiative        <initiative>  - Re-point to initiative (UUID, slug ID, or name); replaces the current attachment  
  --team              <team>        - Re-point to team (key); with --cycle, scopes the cycle lookup instead             
  --cycle             <cycle>       - Re-point to cycle: name, number, 'active'/'now', 'next', 'previous', or a         
                                      relative offset like +1 (team from --team or config)                              
  --release           <release>     - Re-point to release (UUID, name, or version); replaces the current attachment     
  -e, --edit                        - Open current content in \$EDITOR for editing                                       
  --force                           - Update content even when document comments may lose inline anchors                

"
stderr:
""
`;

snapshot[`Document Update Command - Update Title 1`] = `
stdout:
"✓ Updated document: New Title
https://linear.app/test/document/new-title-d4b93e3b2695
"
stderr:
""
`;

snapshot[`Document Update Command - Update Content 1`] = `
stdout:
"✓ Updated document: Delegation System Spec
https://linear.app/test/document/delegation-system-spec-d4b93e3b2695
"
stderr:
""
`;

snapshot[`Document Update Command - Allows Content Update With Top Level Comments 1`] = `
stdout:
"✓ Updated document: Delegation System Spec
https://linear.app/test/document/delegation-system-spec-d4b93e3b2695
"
stderr:
""
`;

snapshot[`Document Update Command - Blocks Content Update With Inline Comments 1`] = `
stdout:
""
stderr:
'✗ Failed to update document: Refusing to update document content because this document has inline comments.
  Updating Markdown content can detach or hide Linear document comments. First review comment comment-2 quoting "Current Content", then rerun with --force if you accept that risk.
'
`;

snapshot[`Document Update Command - Force Content Update With Comments 1`] = `
stdout:
"✓ Updated document: Delegation System Spec
https://linear.app/test/document/delegation-system-spec-d4b93e3b2695
"
stderr:
""
`;

snapshot[`Document Update Command - Update Multiple Fields 1`] = `
stdout:
"✓ Updated document: Updated Title
https://linear.app/test/document/updated-title-d4b93e3b2695
"
stderr:
""
`;

snapshot[`Document Update Command - No Fields Provided 1`] = `
stdout:
""
stderr:
"✗ Failed to update document: No update fields provided
  Use --title, --content, --content-file, --icon, --edit, or re-point the attachment with --project, --issue, --initiative, --team, --cycle, or --release.
"
`;

snapshot[`Document Update Command - Resolved Inline Comment Does Not Block 1`] = `
stdout:
"✓ Updated document: Delegation System Spec
https://linear.app/test/document/delegation-system-spec-d4b93e3b2695
"
stderr:
""
`;

snapshot[`Document Update Command - Set Project By UUID 1`] = `
stdout:
"✓ Updated document: Spec
https://linear.app/test/document/spec-d4b93e3b2695
"
stderr:
""
`;

snapshot[`Document Update Command - Set Project By Name 1`] = `
stdout:
"✓ Updated document: Spec
https://linear.app/test/document/spec-d4b93e3b2695
"
stderr:
""
`;

snapshot[`Document Update Command - Title And Project 1`] = `
stdout:
"✓ Updated document: Spec
https://linear.app/test/document/spec-d4b93e3b2695
"
stderr:
""
`;

snapshot[`Document Update Command - Project Not Found 1`] = `
stdout:
""
stderr:
"✗ Failed to update document: Project not found: Nope
  Pass a project UUID, slug ID (from \`linear project list\`), or exact project name.
"
`;

snapshot[`Document Update Command - Repoint To Team 1`] = `
stdout:
"✓ Updated document: Spec
https://linear.app/test/document/spec-d4b93e3b2695
"
stderr:
""
`;

snapshot[`Document Update Command - Repoint To Issue 1`] = `
stdout:
"✓ Updated document: Spec
https://linear.app/test/document/spec-d4b93e3b2695
"
stderr:
""
`;

snapshot[`Document Update Command - Repoint To Release 1`] = `
stdout:
"✓ Updated document: Spec
https://linear.app/test/document/spec-d4b93e3b2695
"
stderr:
""
`;

snapshot[`Document Update Command - Multiple Targets Error 1`] = `
stdout:
""
stderr:
"✗ Failed to update document: Only one attachment target may be set (got --project, --release)
  Pass exactly one of --project, --issue, --initiative, --team, --cycle, or --release. (--team combined with --cycle scopes the cycle lookup and does not count as a second target.)
"
`;
